# LearnOS

os/: Cargo.toml  Makefile
os/.cargo/: config
os/src/: console.rs  main.rs  panic.rs
os/src/boot/: linker.ld
os/src/interrupt/: mod.rs  timer.rs
os/src/memory/mapping/: mapping.rs
os/src/process/: mod.rs  process.rs  thread.rs
user/: Makefile
