[package]
name = "os"
version = "0.1.0"
authors = ["miquanyu <1135477643@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bit_field = "0.10.0"
algorithm = { path = 'src/algorithm' }
spin = "0.5.2"
xmas-elf = "0.7.0"
bitflags = "1.2.1"
hashbrown = "0.8.1"
device_tree = { git = "https://github.com/rcore-os/device_tree-rs" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs"}
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs"}

# panic 时直接终止，因为我们没有实现堆栈展开的功能
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"